# python-backend

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  celery_worker.py  celeryconfig.py  docker-compose.yml  main.py  model.py  pyproject.toml  requirements.txt  task.py
Homework_1/: README.md  app.py  routers.py
inventory/: database.py  main.py  models.py
payment/: Dockerfile  database.py  main.py  models.py
server/: Dockerfile  requirements.txt
server/inventory/: Dockerfile  main.py  models.py  requirements.txt
server/payment/: database.py  main.py  models.py
server/src/: app.py  crud.py  database.py  models.py  routers.py  schemas.py
server/tests/: test_integration.py  test_inventory.py  test_module.py  test_payment.py
